--- a/style.css
+++ b/style.css
@@ -136,9 +136,10 @@ section h2::after {
     align-items: center;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     width: 100%;
-    max-width: 600px;
+    max-width: 350px;
     transition: transform 0.3s ease;
-    text-align: left;
+    text-align: center;
+    padding: 1.5rem;
 }
 
 .project:hover {
@@ -147,10 +148,11 @@ section h2::after {
 
 /* Project image */
 .project img {
-    width: 40%;
-    height: 100%;
+    width: 100%;
+    height: 200%;
     object-fit: cover;
-    border-radius: 15px 0 0 15px;
+    border-radius: 10px;
+    margin-bottom: 1rem;
 }
 
 /* Project content */
