--- a/style.css
+++ b/style.css
@@ -139,7 +139,6 @@ section h2::after {
     max-width: 350px;
     transition: transform 0.3s ease;
     text-align: center;
-    padding: 1.5rem;
 }
 
 .project:hover {
@@ -148,10 +147,10 @@ section h2::after {
 
 /* Project image */
 .project img {
-    width: 100%;
-    height: 200%;
+    width: 40%;
+    height: 100%;
     object-fit: cover;
-    border-radius: 10px;
+    border-radius: 15px 0 0 15px;
     margin-bottom: 1rem;
 }
 
