--- a/style.css
+++ b/style.css
@@ -181,12 +181,25 @@ section h2::after {
 /* Responsive layout for smaller screens */
 @media (max-width: 768px) {
     .project-container {
+        display: flex;
         flex-direction: column;
         align-items: center;
-  }
+    }
 
     .project {
+        flex-direction: column;
         max-width: 90%;
+    }
+
+    .project img {
+        width: 100%;
+        height: 200px;
+        border-radius: 15px 15px 0 0;
+    }
+
+    .project-content {
+        width: 100%;
+        text-align: center;
     }
 }
 
